# configent

./: .dockerignore  .env.example  .gitignore  CONFIGENT.md  CONFIGENT_BUILD.md  CONTEXT.md  Makefile  POC_FACTORY_ARCHITECTURE.md  POC_FACTORY_BUILD_PLAN.md  POC_FACTORY_TEST_ANCHORS.md  README.md
.github/workflows/: deploy-docs.yml
apps/api/: .dockerignore  Dockerfile  Makefile  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 0001_initial_schema.py
apps/api/app/: cli.py  database.py  ingest.py  main.py  models.py
apps/api/app/agent/: loop.py
apps/api/app/config/: registry.py  schema.py
apps/api/app/retrieval/: chunker.py  embed.py  parsers.py  search.py
apps/api/app/routers/: clients.py  health.py
apps/api/app/tools/: registry.py
apps/api/app/tools/acme_fab/: pricing_lookup.py
apps/api/app/tools/configent_support/: create_support_ticket.py
apps/api/app/tools/meridian/: coverage_check.py
apps/api/app/tools/shared/: get_document.py  search_docs.py
apps/api/tests/: test_agent.py  test_caching.py  test_chunker.py  test_config.py  test_e2e_citations.py  test_e2e_stream.py  test_e2e_tools.py  test_embed.py  test_parsers.py  test_stream.py  test_tools.py
apps/docs/: astro.config.mjs  package-lock.json  package.json
apps/web/: Dockerfile  next.config.ts  package-lock.json  (+1 more)
briefs/: acme-fab.md  meridian-insurance.md
config/: acme-fab.yaml  configent-support.yaml  meridian-insurance.yaml
docs/: configent-support-plan.md
infra/: docker-compose.yml
prompts/: acme-fab.md  configent-support.md  meridian-insurance.md
(+66 files in other folders)
