[project]
name = "configent-api"
version = "0.1.0"
description = "Configent — FastAPI backend for config-driven enterprise AI assistants"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.8.0",
    "pydantic-settings>=2.4.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    "anthropic>=0.34.0",
    "voyageai>=0.3.0",
    "pypdf>=4.3.0",
    "beautifulsoup4>=4.12.0",
    "python-multipart>=0.0.9",
    "pyyaml>=6.0.2",
    "typer>=0.12.0",
    "rich>=13.8.0",
    "tiktoken>=0.7.0",
    "watchfiles>=0.23.0",
    "python-dotenv>=1.0.0",
    "pgvector>=0.3.0",
]

[project.scripts]
configent = "app.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.uv]
package = true
dev-dependencies = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
    "ruff>=0.6.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
